--- a/blogs/blogs-styles.css
+++ b/blogs/blogs-styles.css
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: .25fr 1fr 1fr 1fr .25fr;
+    grid-template-rows: .30fr .9fr .9fr .9fr .30fr;
     grid-template-areas:
     "header header"
     "blog1 blog1"
@@ -30,7 +30,7 @@ body {
     background-color:#F7F8F7;
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 15px;
 }
 
 .blog2 {
@@ -38,7 +38,7 @@ body {
     background-color:#F7F8F7;
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 5px;
 }
 
 .blog3 {
@@ -46,7 +46,7 @@ body {
     background-color:#F7F8F7;
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 5px;
 }
 
 .footer {
@@ -141,5 +141,5 @@ button:hover{
 }
  
 footer > small {
-     color: #F7F8F7;
+    color: #F7F8F7;
 }
